3_ingress_create/ingress-route.yaml
# used to set up an ingress route to ipv4check
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cassandra-mon-ingress
  namespace: cassandra-mon
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
spec:
  tls:
  - hosts:
    - cassandra-mon.thunderhead.com
    secretName: cassandra-mon-thunderhead-wildcard-tls
  rules:
   - host: cassandra-mon.thunderhead.com
     http:
      paths:
      - path: /
        backend:
          serviceName: cassandra-mon
          servicePort: 3000
